--- a/toutiao_alipay/client/page/component/pages/canvas/canvas.axml
+++ b/toutiao_alipay/client/page/component/pages/canvas/canvas.axml
@@ -1,16 +1,5 @@
-<import src="../../../common/head.axml"></import>
-<import src="../../../common/foot.axml"></import>
-
-<view  class="container">
-  <template  is="head" data="{{title: 'canvas'}}"></template>
-
-  <view  class="page-body">
-    <view  class="page-body-wrapper">
-      <canvas  id="canvas" class="canvas"></canvas>
-    </view>
+<view class="container">
+  <view class="body canvas-space">
+    <onekit-canvas canvas-id="canvas" Class="canvas"></onekit-canvas>
   </view>
-
-  <template  is="foot"></template>
 </view>
-
-
