--- a/toutiao_alipay/client/page/component/pages/navigator/navigator.axml
+++ b/toutiao_alipay/client/page/component/pages/navigator/navigator.axml
@@ -1,20 +1,22 @@
 <import src="../../../common/head.axml"></import>
 <import src="../../../common/foot.axml"></import>
 
-<view  class="container">
-  <template  is="head" data="{{title: 'navigator'}}"></template>
+<view class="container">
+  <template is="head" data="{{title: 'navigator'}}"/>
 
-  <view  class="page-body">
-    <view  class="btn-area">
-      <navigator  url="navigate?title=navigate" hover-class="navigator-hover">
-        <wx-button  type="default">跳转到新页面</wx-button>
-      </navigator>
-      <navigator  url="redirect?title=redirect" redirect hover-class="other-navigator-hover">
-        <wx-button  type="default">在当前页打开</wx-button>
-      </navigator>
-      
+  <view class="page-body">
+    <view class="btn-area">
+      <onekit-navigator url="navigate?title=navigate" hover-class="navigator-hover">
+        <button type="default">跳转到新页面</button>
+      </onekit-navigator>
+      <onekit-navigator url="redirect?title=redirect" redirect hover-class="other-navigator-hover">
+        <button type="default">在当前页打开</button>
+      </onekit-navigator>
+      <onekit-navigator target="miniProgram" open-type="navigate" app-id="wx4f1b24bdc99fa23b" version="release">
+         <button type="default">打开小程序</button>
+        </onekit-navigator>
     </view>
   </view>
 
-  <template  is="foot"></template>
+  <template is="foot" />
 </view>
