增加image事件；更改video样式

--- a/toutiao_alipay/client/onekit/ui/image/image.axml
+++ b/toutiao_alipay/client/onekit/ui/image/image.axml
@@ -1,1 +1,9 @@
-<image class="onekit_image {{Class}}" style="{{Style}}" mode="{{mode}}" src="{{src}}"/>
+<image 
+  class="onekit_image {{Class}}" 
+  style="{{Style}}"
+  mode="{{mode}}"
+  src="{{src}}"
+
+  onError="image_error"
+  onLoad="image_load"
+   />
