--- a/toutiao_alipay/client/page/component/pages/view/view.axml
+++ b/toutiao_alipay/client/page/component/pages/view/view.axml
@@ -1,33 +1,33 @@
 <import src="../../../common/head.axml"></import>
 <import src="../../../common/foot.axml"></import>
 
-<view  class="container">
+<onekit-view  class="container">
   <template  is="head" data="{{title: 'view'}}"></template>
 
-  <view  class="page-body">
-    <view  class="page-section">
-      <view  class="page-section-title">
+  <onekit-view  class="page-body">
+    <onekit-view  class="page-section">
+      <onekit-view  class="page-section-title">
         <text >flex-direction: row\n横向布局</text>
-      </view>
-      <view  class="page-section-spacing">
-        <view  class="flex-wrp" style="flex-direction:row;">
-          <view  class="flex-item demo-text-1"></view>
-          <view  class="flex-item demo-text-2"></view>
-          <view  class="flex-item demo-text-3"></view>
-        </view>
-      </view>
-    </view>
-    <view  class="page-section">
-      <view  class="page-section-title">
+      </onekit-view>
+      <onekit-view  class="page-section-spacing">
+        <onekit-view  class="flex-wrp" style="flex-direction:row;">
+          <onekit-view  class="flex-item demo-text-1"></onekit-view>
+          <onekit-view  class="flex-item demo-text-2"></onekit-view>
+          <onekit-view  class="flex-item demo-text-3"></onekit-view>
+        </onekit-view>
+      </onekit-view>
+    </onekit-view>
+    <onekit-view  class="page-section">
+      <onekit-view  class="page-section-title">
         <text >flex-direction: column\n纵向布局</text>
-      </view>
-      <view  class="flex-wrp" style="flex-direction:column;">
-        <view  class="flex-item flex-item-V demo-text-1"></view>
-        <view  class="flex-item flex-item-V demo-text-2"></view>
-        <view  class="flex-item flex-item-V demo-text-3"></view>
-      </view>
-    </view>
-  </view>
+      </onekit-view>
+      <onekit-view  class="flex-wrp" style="flex-direction:column;">
+        <onekit-view  class="flex-item flex-item-V demo-text-1"></onekit-view>
+        <onekit-view  class="flex-item flex-item-V demo-text-2"></onekit-view>
+        <onekit-view  class="flex-item flex-item-V demo-text-3"></onekit-view>
+      </onekit-view>
+    </onekit-view>
+  </onekit-view>
 
   <template  is="foot"></template>
-</view>
+</onekit-view>
