--- a/toutiao_alipay/client/onekit/ui/icon/icon.axml
+++ b/toutiao_alipay/client/onekit/ui/icon/icon.axml
@@ -1,2 +1,4 @@
-<view class="onekit-icon-{{type}} {{Class}}" style="color:{{color}};font-size:{{size}}px; {{Style}}">
+<view
+id="{{Id}}"
+class="onekit-icon-{{type}} {{Class}}" style="color:{{color}};font-size:{{size}}px; {{Style}}">
 </view>
