--- a/toutiao_alipay/client/onekit/ui/view/view.axml
+++ b/toutiao_alipay/client/onekit/ui/view/view.axml
@@ -1,4 +1,12 @@
-<view class="onkit-view {{Class}}" style="{{Style}}">
+<view
+id="{{Id}}"
+class="onkit-view {{Class}}" style="{{Style}}"
+hover-class="{{hoverClass}}"
+hover-stop-propagation="{{hoverStopPropagation}}"
+hover-start-time="{{hoverStartTime}}"
+hover-stay-time="{{hoverStayTime}}"
+onTap="view_tap"
+>
 <slot>
 
 </slot>
