--- a/toutiao_alipay/client/onekit/ui/rich-text/rich-text.axml
+++ b/toutiao_alipay/client/onekit/ui/rich-text/rich-text.axml
@@ -1,6 +1,6 @@
 <rich-text
-id="{{Id}}"
-class="onekit-rich-text {{Class}}"
+id="{{id}}"
+class="onekit-rich-text {{onekitClass}}"
 style="{{style}}"
 nodes="{{nodes}}"/>
 <slot></slot>
