--- a/toutiao_alipay/client/onekit/ui/icon/icon.axml
+++ b/toutiao_alipay/client/onekit/ui/icon/icon.axml
@@ -1,4 +1,4 @@
 <view
-id="{{Id}}"
-class="onekit-icon-{{type}} {{Class}}" style="color:{{color}};font-size:{{size}}px; {{Style}}">
+id="{{id}}"
+class="onekit-icon-{{type}} {{onekitClass}}" style="color:{{color}};font-size:{{size}}px; {{onekitStyle}}">
 </view>
