--- a/toutiao_alipay/client/onekit/ui/navigator/navigator.axml
+++ b/toutiao_alipay/client/onekit/ui/navigator/navigator.axml
@@ -1,7 +1,7 @@
 <navigator
-class="onekit-navigator {{Class}}"
-style="{{Style}}"
-id="{{Id}}"
+class="onekit-navigator {{onekitClass}}"
+style="{{onekitStyle}}"
+id="{{id}}"
 url="{{url}}"
 delta="{{delta}}"
 open-type="{{openType}}"
