--- a/toutiao_alipay/client/onekit/ui/scroll-view/scroll-view.axml
+++ b/toutiao_alipay/client/onekit/ui/scroll-view/scroll-view.axml
@@ -1,7 +1,7 @@
 <scroll-view
-id="{{Id}}"
-class="onekit-scroll-view {{Class}}"
-style="{{Style}}"
+id="{{id}}"
+class="onekit-scroll-view {{onekitClass}}"
+style="{{onekitStyle}}"
 scroll-y="{{scrollY}}"
 scroll-x="{{scrollX}}"
 upper-threshold="{{UpperThreshold}}"
