--- a/toutiao_alipay/client/onekit/ui/switch/switch.axml
+++ b/toutiao_alipay/client/onekit/ui/switch/switch.axml
@@ -1,5 +1,5 @@
 <switch
-class="onekit-switch {{Class}}"
-style="{{Style}}"
+class="onekit-switch {{onekitClass}}"
+style="{{onekitStyle}}"
 checked="{{checked}}"
 />
