--- a/toutiao_alipay/client/onekit/ui/text/text.axml
+++ b/toutiao_alipay/client/onekit/ui/text/text.axml
@@ -1,7 +1,7 @@
 <text
-id="{{Id}}"
-class="onekit_text {{Class}}"
-style="{{Style}}"
+id="{{id}}"
+class="onekit_text {{onekitClass}}"
+style="{{onekitStyle}}"
 selectable="{{selectable}}"
 space="{{space}}"
 decode="{{decode}}">
