--- a/toutiao_alipay/client/onekit/ui/web-view/web-view.axml
+++ b/toutiao_alipay/client/onekit/ui/web-view/web-view.axml
@@ -1,6 +1,6 @@
 <view
-class="onekit-web-view {{Class}}"
-style="{{Style}}"
-id="{{Id}}"
+class="onekit-web-view {{onekitClass}}"
+style="{{onekitStyle}}"
+id="{{id}}"
 >
 </view>
