--- a/toutiao_alipay/client/page/component/pages/view/view.axml
+++ b/toutiao_alipay/client/page/component/pages/view/view.axml
@@ -1,30 +1,30 @@
 <import src="../../../common/head.axml"></import>
 <import src="../../../common/foot.axml"></import>
 
-<onekit-view  class="container">
+<onekit-view  onekit-class="container">
   <template  is="head" data="{{title: 'view'}}"></template>
 
-  <onekit-view  class="page-body">
-    <onekit-view  class="page-section">
-      <onekit-view  class="page-section-title">
+  <onekit-view  onekit-class="page-body">
+    <onekit-view  onekit-onekit-class="page-section">
+      <onekit-view  onekit-class="page-section-title">
         <text >flex-direction: row\n横向布局</text>
       </onekit-view>
-      <onekit-view  class="page-section-spacing">
-        <onekit-view  class="flex-wrp" style="flex-direction:row;">
-          <onekit-view  class="flex-item demo-text-1"></onekit-view>
-          <onekit-view  class="flex-item demo-text-2"></onekit-view>
-          <onekit-view  class="flex-item demo-text-3"></onekit-view>
+      <onekit-view  onekit-class="page-section-spacing">
+        <onekit-view  onekit-class="flex-wrp" onekit-style="flex-direction:row;">
+          <onekit-view  onekit-class="flex-item demo-text-1"></onekit-view>
+          <onekit-view  onekit-class="flex-item demo-text-2"></onekit-view>
+          <onekit-view  onekit-class="flex-item demo-text-3"></onekit-view>
         </onekit-view>
       </onekit-view>
     </onekit-view>
-    <onekit-view  class="page-section">
-      <onekit-view  class="page-section-title">
+    <onekit-view  onekit-class="page-section">
+      <onekit-view  onekit-class="page-section-title">
         <text >flex-direction: column\n纵向布局</text>
       </onekit-view>
-      <onekit-view  class="flex-wrp" style="flex-direction:column;">
-        <onekit-view  class="flex-item flex-item-V demo-text-1"></onekit-view>
-        <onekit-view  class="flex-item flex-item-V demo-text-2"></onekit-view>
-        <onekit-view  class="flex-item flex-item-V demo-text-3"></onekit-view>
+      <onekit-view  onekit-class="flex-wrp" onekit-style="flex-direction:column;">
+        <onekit-view  onekit-class="flex-item flex-item-V demo-text-1"></onekit-view>
+        <onekit-view  onekit-class="flex-item flex-item-V demo-text-2"></onekit-view>
+        <onekit-view  onekit-class="flex-item flex-item-V demo-text-3"></onekit-view>
       </onekit-view>
     </onekit-view>
   </onekit-view>
