--- a/toutiao_alipay/client/onekit/ui/radio/radio.axml
+++ b/toutiao_alipay/client/onekit/ui/radio/radio.axml
@@ -1,6 +1,7 @@
 <radio
 class="onekit-radio {{onekitClass}}"
 style="{{onekitStyle}}"
+id="{{onekitId}}"
 value="{{value}}"
 checked="{{checked}}"
 disabled="{{disabled}}"
