--- a/toutiao_alipay/client/onekit/ui/scroll-view/scroll-view.axml
+++ b/toutiao_alipay/client/onekit/ui/scroll-view/scroll-view.axml
@@ -1,5 +1,5 @@
 <scroll-view
-id="{{id}}"
+id="{{onekitId}}"
 class="onekit-scroll-view {{onekitClass}}"
 style="{{onekitStyle}}"
 scroll-y="{{scrollY}}"
