--- a/toutiao_alipay/client/onekit/ui/checkbox-group/checkbox-group.axml
+++ b/toutiao_alipay/client/onekit/ui/checkbox-group/checkbox-group.axml
@@ -1,6 +1,7 @@
 <checkbox-group
 class="onekit-checkbox-group {{onekitClass}}"
 style="{{onekitStyle}}"
+id="{{onekitId}}"
 >
 <slot></slot>
 </checkbox-group>
