--- a/toutiao_alipay/client/onekit/ui/picker-view-column/picker-view-column.axml
+++ b/toutiao_alipay/client/onekit/ui/picker-view-column/picker-view-column.axml
@@ -1,5 +1,5 @@
 <picker-view >
-  <picker-view-column class="onekit-picker-view-column {{onekitClass}}" style="{{onekitStyle}}">
+  <picker-view-column class="onekit-picker-view-column {{onekitClass}}" style="{{onekitStyle}}" id="{{onekitId}}">
   <slot>
   </slot>
   </picker-view-column>
