--- a/toutiao_alipay/client/onekit/ui/checkbox/checkbox.axml
+++ b/toutiao_alipay/client/onekit/ui/checkbox/checkbox.axml
@@ -1,5 +1,8 @@
 <view>
 <checkbox 
+  class="onekit-checkbox {{onekitClass}}"
+  style="{{onekitStyle}}"
+  id="{{onekitId}}"
   value="{{value}}" 
   disabled="{{disabled}}"
   checked="{{checked}}"
