--- a/toutiao_alipay/client/onekit/ui/rich-text/rich-text.axml
+++ b/toutiao_alipay/client/onekit/ui/rich-text/rich-text.axml
@@ -1,7 +1,7 @@
 <rich-text
 id="{{onekitId}}"
 class="onekit-rich-text {{onekitClass}}"
-style="{{style}}"
+style="{{onekitStyle}}"
 nodes="{{nodes}}"/>
 <slot></slot>
 </rich-text>
