--- a/miniprogram_dev/toutiao2alipay/ui/view/view.axml
+++ b/miniprogram_dev/toutiao2alipay/ui/view/view.axml
@@ -5,7 +5,7 @@ hover-class="{{hoverClass}}"
 hover-stop-propagation="{{hoverStopPropagation}}"
 hover-start-time="{{hoverStartTime}}"
 hover-stay-time="{{hoverStayTime}}"
-onTap="view_tap"
+onTap="ui_tap"
 >
 <slot>
 
