--- a/src/ui/switch/switch.axml
+++ b/src/ui/switch/switch.axml
@@ -1,6 +1,22 @@
-<switch
-class="onekit-switch {{onekitClass}}"
-style="{{onekitStyle}}"
-id="{{onekitId}}"
-checked="{{checked}}"
-/>
+<switch a:if ="{{type=='switch'}}"
+  id="{{onekitId}}"
+  class="onekit-switch {{onekitClass}}"
+  style="{{onekitStyle}}"
+  checked="{{checked}}"
+  disabled="{{disabled}}"
+  color="{{color}}"
+  onChange="switch_Change">
+<slot/>
+</switch>
+
+<checkbox a:elif = "{{type=='checkbox'}}"
+  id="{{onekitId}}"
+  class="onekit-switch {{onekitClass}}"
+  style="{{onekitStyle}}"
+  value="{{value}}"
+  checked="{{checked}}"
+  disabled="{{disabled}}"
+  color="{{color}}"
+  onChange="checkbox_Change">
+<slot/>
+</checkbox>
