--- a/src/ui/web-view/web-view.axml
+++ b/src/ui/web-view/web-view.axml
@@ -1,6 +1,17 @@
-<view
-class="onekit-web-view {{onekitClass}}"
-style="{{onekitStyle}}"
-id="{{onekitId}}"
->
-</view>
+<navigator
+  id="{{onekitId}}"
+  class="onekit-navigator {{onekitClass}}"
+  style="{{onekitStyle}}"
+
+  open-type="{{openType}}"
+  hover-class="{{hoverClass}}"
+  hover-start-time="{{hoverStartTime}}"
+  hover-stay-time="{{hoverStayTime}}"
+  url="{{url}}"
+
+  onTap="navigator_tap"
+  >
+<slot></slot>
+</navigator>
+
+<view a:if="hoverStopPropagation==={{hoverStopPropagation}}" onTap="view_tap"><view>
