--- a/miniprogram_dev/li/li.axml
+++ b/miniprogram_dev/li/li.axml
@@ -222,6 +222,7 @@
 </onekit-view> -->
 
 <!-- <canvas> -->
+<import-sjs name="_" from="../toutiao2alipay/_.sjs"/>
 <onekit-view onekit-class="container">
   <onekit-view onekit-class="canvas-intro">canvas基础绘画能力</onekit-view>
 	<onekit-view onekit-class="canvas-item">
@@ -229,7 +230,7 @@
 		<onekit-view onekit-class="expection">预期：一个小人</onekit-view>
 	</onekit-view>
 	<onekit-view onekit-class="canvas-item">
-		<!-- <onekit-canvas onekit-id="canvas_type_2d" type="2d" onError="testBinderror" onTouchstart="testBindtouchstart" onTouchmove="testBindtouchmove" onTouchcancel="testBindtouchcancel" onTouchend="testBindtouchend" onekit-style="width: {{width+100}}px; height: 100px;border: 1px solid blue" onekit-dataset='"key":{{_("native-2d")}}'></onekit-canvas> -->
+		<onekit-canvas onekit-id="canvas_type_2d" type="2d" onError="testBinderror" onTouchstart="testBindtouchstart" onTouchmove="testBindtouchmove" onTouchcancel="testBindtouchcancel" onTouchend="testBindtouchend" onekit-style="width: {{width+100}}px; height: 100px;border: 1px solid blue" onekit-dataset='"key":{{_("native-2d")}}'></onekit-canvas>
 		<onekit-view onekit-class="expection">预期：canvas 2d</onekit-view>
 	</onekit-view>
 </onekit-view>
